<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.18</version>
        <relativePath/>
    </parent>

    <groupId>com.agent4j</groupId>
    <artifactId>agent4j</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <name>agent4j</name>
    <description>Lightweight multi-agent framework for Spring Boot</description>
    <packaging>pom</packaging>

    <licenses>
        <license>
            <name>PolyForm Noncommercial License 1.0.0</name>
            <url>https://polyformproject.org/licenses/noncommercial/1.0.0/</url>
        </license>
    </licenses>

    <properties>
        <java.version>1.8</java.version>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>1.8</source>
                        <target>1.8</target>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <modules>
        <module>agent4j-core</module>
        <module>agent4j-spring-boot-starter</module>
    </modules>
</project>
